<resources>
    <string name="app_name">FlipgridSignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="disclaimer_text_1">Use the form below to submit your portfolio.</string>
    <string name="disclaimer_text_2">An email and password are required.</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="submit">Submit</string>
    <string name="success_message">Your super-awesome portfolio has been successfully submitted! The details below will be public within your community!</string>
    <string name="greetings">Hello!</string>
    <string name="greetings_with_name">Hello, %s!</string>
    <string name="empty_email">An email is required to register</string>
    <string name="invalid_email">Email address is not valid</string>
    <string name="empty_password">A password is required to register</string>
    <string name="password_no_caps">Password must contain a capital letter</string>
    <string name="password_no_number">Password must contain a number</string>
    <string name="password_no_special_char">Password must contain a special character</string>
    <string name="password_length">Password must be between 8-12 characters</string>
</resources>