<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".app.activities.RegistrationActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lftetica_bold"
            android:text="@string/profile_creation"
            android:textColor="#545454"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/disclaimer_text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/disclaimer_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/araboto_medium"
            android:paddingTop="5dp"
            android:text="@string/disclaimer_text_1"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/disclaimer_text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/araboto_medium"
            android:paddingBottom="30dp"
            android:text="@string/disclaimer_text_2"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/disclaimer_text_1" />

        <!-- Input fields -->
        <LinearLayout
            android:id="@+id/text_input_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_text_2"
            >

            <!-- First name field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:hint="@string/first_name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:hint="@string/email_address"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:paddingBottom="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Website field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:hint="@string/website"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/text_input_group"
            app:layout_constraintVertical_bias="0.9"
            android:text="@string/submit"
            style="@style/Theme.FlipgridSignUp.SignUpButton"
            android:textColor="#ffffff"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>